--- a/Pathfinding/Assembly-CSharp.csproj
+++ b/Pathfinding/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Algorithms\Algorithms.cs" />
+    <Compile Include="Assets\Scripts\Algorithms\AlgorithmStep.cs" />
     <Compile Include="Assets\Scripts\Algorithms\AStar.cs" />
     <Compile Include="Assets\Scripts\Algorithms\BreadthFirstSearch.cs" />
     <Compile Include="Assets\Scripts\Algorithms\Dijkstras.cs" />
